js: basic implementation of a HUD

--- a/src/base.html
+++ b/src/base.html
@@ -18,6 +18,7 @@
       }
    </style>
    <script src="babylon.js"></script>
+   <script src="babylon.gui.min.js"></script>
    <script src="jquery-3.2.1.min.js"></script> <!-- optional physics engine -->
    <script src="pktcity.js"></script> <!-- optional physics engine -->
 </head>
