--- a/src/base.html
+++ b/src/base.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta charset="utf-8">
-   <title>Babylon - Basic scene</title>
+   <title>Pktcity</title>
    <style>
       html, body {
          overflow: hidden;
